--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
-title: Your name or name of site
+title: GreenMonty
 description: A website with a blog
-footer_text: Copyright 2021 Your name
-header_feature_image: ../uploads/moussaka.jpg
+footer_text: Copyright 2021 Bruno Pawroznik
+header_feature_image: ../uploads/pawel-czerwinski-7fpy4bvvqwo-unsplash.jpg
 header_text: My Dream Blog
 header_text_color: "#ffffff"
 bannerheight: 20vmax
