--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,8 @@ title: GreenMonty
 description: A website with a blog
 footer_text: Copyright 2021 Bruno Pawroznik
 header_feature_image: ../uploads/pawel-czerwinski-7fpy4bvvqwo-unsplash.jpg
-header_text: My Dream Blog
+header_text: I am the Glob-glo-gab-galab, The shwabble-dabble-wabble-gabble
+  flibba blabba blab
 header_text_color: "#ffffff"
 bannerheight: 20vmax
 navbarheight: 55px
