--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ footer_text: Copyright 2021 Bruno Pawroznik
 header_feature_image: ../uploads/pawel-czerwinski-7fpy4bvvqwo-unsplash.jpg
 header_text: I am the Glob-glo-gab-galab, The shwabble-dabble-wabble-gabble
   flibba blabba blab
-header_text_color: "#ffffff"
+header_text_color: "#c5a072"
 bannerheight: 20vmax
 navbarheight: 55px
 logo: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.jpg
