--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ title: GreenMonty
 description: A website with a blog
 footer_text: Copyright 2021 Bruno Pawroznik
 header_feature_image: ../uploads/pawel-czerwinski-7fpy4bvvqwo-unsplash.jpg
-header_text: I ruddy love fonts me
+header_text: Fonts Throughout Music History
 header_text_color: "#c5a072"
 bannerheight: 20vmax
 navbarheight: 55px
