--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,8 +6,8 @@ header_text: Fonts Throughout Music History
 header_text_color: "#c5a072"
 bannerheight: 20vmax
 navbarheight: 55px
-logo: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.png
-favicon: /uploads/favicon.ico
+logo: ../uploads/green-monty-logo.jpg
+favicon: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.png
 gridlayout: false
 fixednavbar: false
 upzoom: true
