--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ header_text_color: "#c5a072"
 bannerheight: 20vmax
 navbarheight: 55px
 logo: ../uploads/green-monty-logo.jpg
-favicon: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.png
+favicon: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.ico
 gridlayout: false
 fixednavbar: false
 upzoom: true
