--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 title: GreenMonty
 description: A website with a blog
-footer_text: Copyright 2021 Bruno Pawroznik
+footer_text: Harry Banks 2021 ©
 header_feature_image: ../uploads/19-tame-impala-the-slow-rush-neil-krug.jpg
 header_text: Fonts Throughout Music History
 header_text_color: "#c5a072"
