Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ title: GreenMonty
 description: A website with a blog
 footer_text: Harry Banks 2021 ©
 header_feature_image: ../uploads/19-tame-impala-the-slow-rush-neil-krug.jpg
-header_text: Fonts Throughout Music History
+header_text: Fonts Within Music
 header_text_color: "#c5a072"
 bannerheight: 50vmax
 navbarheight: 55px
