Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ header_text: Fonts Within Music
 header_text_color: "#c5a072"
 bannerheight: 50vmax
 navbarheight: 55px
-logo: ../uploads/green-monty-logo.jpg
+logo: ../uploads/greenmonty-logo-again.png
 favicon: ../uploads/ryan-phillips-pidjfnvoxy0-unsplash.ico
 gridlayout: false
 fixednavbar: false
