--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,4 +13,4 @@ fixednavbar: false
 upzoom: true
 items:
   - name: About the Author
-    siteurl: file:///Users/19059522/Downloads/aboutme/index.htm\
+    siteurl: /aboutme/
